--- a/test.html
+++ b/test.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-   <p>Hello I'm on develop branch</p>
+   <p>Hello I'm on develop branch with conflict</p>
 </body>
 </html>
