--- a/test.html
+++ b/test.html
@@ -9,4 +9,4 @@
    <p>Hello I'm on develop branch with conflict</p>
    <p>Hello I'm on develop branch without conflict </p>
 </body>
-</html>
+</html>asadas
